# urban-enigma

./: .gitignore  .gitmodules  README.md  SECURITY.md  cant-push-secrets-error.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
BE/app/config/: _Js.js  connect.js
BE/views/: index.html
CofeeAppBackEnd/: package.json
CofeeAppBackEnd/postman/: access.post.http
backend/: .env.shared  .gitignore  eslint.config.mjs  index.js  package-lock.json  package.json  tsconfig.json
backend-fastapi/: Pipfile  README.md  main.ashypercornapi.py  main.py
backend-fastapi/app/: database.py  main.py  settings.ini  settings.py
backend-fastapi/scripts/: generate_secret_key.py
backend/backend-fastapi/: hello.py  pyproject.toml
backend/backend-fastapi/app/: main.py  settings.py
backend/backend-fastapi/app/accounts/: settings.py
backend/backend-fastapi/app/auth/: models.py  securities.py  utils.py
backend/backend-fastapi/gialo-money/: Pipfile  config.json  main.py
backend/backend-firebase-auth/: filebaseUserController.js  firebaseAuthPassport.js  firebaseAuthService.js  firebaseUserRouter.js
backend/backend-hieu/: package.json.orig
backend/backend-hieu copy/: .gitignore.orig  package.json
backend/backend-hieu copy 3/: index.js  package-lock.json  package.json
backend/backend-hung/: hung.env  package-lock.json  package.json
backend/backend-nodejs/: eslint.config.mjs  index.js  package-lock.json  package.json
backend/postman/: getAllProduct.get.http
backend/public/: main.js
backend/src/: app.js  index.ts  server.js
backend/views/: index.html
(+475 files in other folders)
