[project]
name = "backend-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beanie>=1.29.0",
    "fastapi[all]>=0.115.8",
    "isodate>=0.7.2",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.4.0",
    "rich>=13.9.4",
    "uvicorn[standard]>=0.34.0",
]
